Status bar on windows changed wording on volunteering menu description

--- a/_data/volunteering.yaml
+++ b/_data/volunteering.yaml
@@ -1,6 +1,5 @@
 ---
-  menu_description: "I help at these places"
-  page_description: ""
+  menu_description: "I help these projects"
   places:
     - name: "Code for DC"
       url: "http://codefordc.org"
