--- a/_data/work.yaml
+++ b/_data/work.yaml
@@ -18,9 +18,9 @@
           <a href="http://www.brasiliana.usp.br/bbd/">digital library</a>.
         </section>
         <section>
-          My work there was to maintain the existing digital library while
-          developing a new version. The new version of the library was ready by the
-          time I left, but it is not up because of infrastructure problems.
+          My work there was to develop a new version of the digital library. The
+          new version of the library was ready by the time I left, but it is not
+          up because of infrastructure problems.
         </section>
         <section>
           Besides that I also helped develop the work flow and intern management
@@ -35,7 +35,11 @@
         <section>
           This is what I helped create at Touch Tecnologia. Unfortunately the
           video is in Portuguese only.
+        </section>
+        <section>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/zfJBQuCQpI0" frameborder="0" allowfullscreen></iframe>
+        </section>
+        <section>
           More information at the
           <a href="http://www.touchhealth.com.br/solucoes/diagnosticos-por-imagem/">product's website</a>.
         </section>
