Fixes broken link to about Small text change

--- a/_data/about.yaml
+++ b/_data/about.yaml
@@ -25,5 +25,5 @@
       description: >
         <section>
           I store the parallel algorithms I write in this repository. Not much
-          to see now, just an example of how I code.
+          to see now, just an example of my code.
         </section>
