--- a/_data/work.yaml
+++ b/_data/work.yaml
@@ -1,5 +1,5 @@
 ---
-  menu_description: "I worked at these places"
+  menu_description: "I work(ed) at these places"
   places:
     - name: "Brazen Technologies"
       id: "brazen"
@@ -7,10 +7,10 @@
       icon: "/images/favicon_brazen.png"
       description: >
         <section>
-          Brazen provides virtual events, not entirely unlike virtual career fairs for both enterprise and higher education customers.
+          Brazen provides virtual events, not entirely unlike virtual career fairs, for both enterprise and higher education customers.
         </section>
         <section>
-          My most notable contributions were the core of the Chat Bot and being part of the team that included video to the application.
+          My most notable contributions were the Chat Bot and including video to the application.
         </section>
     - name: "Mindlin Library"
       id: "bbm"
@@ -24,12 +24,11 @@
           Using specialized book scanners the books are digitized for
           preservation. The preservation copies are then treated and result in
           smaller access copies which are available at their
-          <a href="https://digital.bbm.usp.br/">digital library</a>.
+          <a href="https://digital.bbm.usp.br/" target="_blank">digital library</a>.
         </section>
         <section>
-          I developed a new version of their digital library. The new version
-          was ready by the time I left, but it is not up because of
-          infrastructure problems.
+          I developed the new (current) version of their digital library and a
+          few internal web apps to ease to workload of others.
         </section>
     - name: "Touch Tecnologia"
       id: "touch"
