--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Andy Onuki
-email: andy_onuki@acm.org
+title: André Onuki
+email: andreonuki@acm.org
 description: > # this means to ignore newlines until "baseurl:"
-  This is the personal webpage of André "Andy" Onuki.
+  This is the personal webpage of André Onuki.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://meiao.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
